--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,11 @@ body {
 .mainHeader-h1 {
   font-size: var(--fs-big);
   margin: 0;
+
+  @media (min-width: 500px) {
+    font-size: 48px;
+  }
+
 }
 
 .mainHeader-p {
@@ -29,6 +34,7 @@ body {
   margin:  0 auto;
   padding-top: 10px;
   font-size: var(--fs-medium);
+  color: rgb(91, 91, 91);
 }
 
 img {
@@ -39,7 +45,7 @@ img {
 
 .gsSection {
   margin-top: 30px;
-  padding: 10px 0 10px 0;
+  padding: 30px 0 30px 0;
   background-color: #736CED;
   color: white;
 }
@@ -74,7 +80,11 @@ img {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  /* gap: 5%; */
+
+  @media (min-width: 500px) {
+    justify-content: center;
+  }
+  
 }
 
 .square {
@@ -82,8 +92,15 @@ img {
   min-height: 100px;
   margin: 5%;
   display: flex;
-  background-color: #736CED;
-  color: white;
+  background-color: white;
+  color: black;
+  border-radius: 10px;
+  
+
+  @media (min-width: 500px) {
+    width: 20%;
+    margin: 3%;
+  }
 }
 
 .squere-p {
@@ -93,4 +110,19 @@ img {
   margin: 0 auto;
   width: 80%;
   font-weight: 500;
+}
+
+
+footer {
+  text-align: center;
+  padding: 10px;
+  background-color: white;
+}
+
+.githubImg {
+  margin: 0;
+}
+
+section {
+  padding: 30px 0;
 }
